tests/error/tensor_errors/type_mismatch.err
Error: Type mismatch (at $FILE:12:26)
   | 
10 | @guppy(module)
11 | def main() -> int:
12 |     return (foo, foo)(42, False)
   |                           ^^^^^ Expected argument of type `int`, got `bool`

Guppy compilation failed due to 1 previous error
